--- a/index.html
+++ b/index.html
@@ -3,25 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!--Mi estilo-->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!--Google Fonts-->
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Centro Médico Ñuñoa</title>
 </head>
+
+<script>
+
+    document.write('<p>Estadisticas centro medico ñuñoa</p>');
+
+    var radiologia = [
+        {HORA: '11:00', ESPECIALISTA: 'IGNACIO SCHULZ', PACIENTE: 'FRANCISCA ROJAS', RUT: '9878782-1', PREVISION: 'FONASA'},
+        {HORA: '11:30', ESPECIALISTA: 'FEDERICO SUBERCASEAUX', PACIENTE: 'PAMELA ESTRADA', RUT: '15345241-3', PREVISION: 'ISAPRE'},
+        {HORA: '15:00', ESPECIALISTA: 'FERNANDO WURTHZ', PACIENTE: 'ARMANDO LUNA', RUT: '16445345-9', PREVISION: 'ISAPRE'},
+        {HORA: '15:30', ESPECIALISTA: 'ANA MARIA GODOY', PACIENTE: 'MANUEL GODOY', RUT: '17666419-0', PREVISION: 'FONASA'},
+        {HORA: '16:00', ESPECIALISTA: 'PATRICIA SUAZO', PACIENTE: 'RAMON ULLOA', RUT: '14989389-K', PREVISION: 'FONASA'},
+    ];
+
+    var traumatologia = [
+        {HORA: '8:00', ESPECIALISTA: 'MARIA PAZ ALTUZARRA', PACIENTE: 'PAULA SANCHEZ', RUT: '15554774-5', PREVISION: 'FONASA'},
+        {HORA: '10:00', ESPECIALISTA: 'RAUL ARAYA', PACIENTE: 'ANGÉLICA NAVAS', RUT: '15444147-9', PREVISION: 'ISAPRE'},
+        {HORA: '10:30', ESPECIALISTA: 'MARIA ARRIAGADA', PACIENTE: 'ANA KLAPP', RUT: '17879423-9', PREVISION: 'ISAPRE'},
+        {HORA: '11:00', ESPECIALISTA: 'ALEJANDRO BADILLA', PACIENTE: 'FELIPE MARDONES', RUT: '1547423-6', PREVISION: 'ISAPRE'},
+        {HORA: '11:30', ESPECIALISTA: 'CECILIA BUDNIK', PACIENTE: 'DIEGO MARRE', RUT: '16554741-K', PREVISION: 'FONASA'},
+        {HORA: '12:00', ESPECIALISTA: 'ARTURO CAVAGNARO', PACIENTE: 'CECILIA MENDEZ', RUT: '9747535-8', PREVISION: 'ISAPRE'},
+        {HORA: '12:30', ESPECIALISTA: 'ANDRES KANACRI', PACIENTE: 'MARCIAL SUAZO', RUT: '11254785-5', PREVISION: 'ISAPRE'},
+    ];
+
+    var dental = [
+        {HORA: '8:30', ESPECIALISTA: 'ANDREA ZUÑIGA', PACIENTE: 'MARCELA RETAMAL', RUT: '11123425-6', PREVISION: 'ISAPRE'},
+        {HORA: '11:00', ESPECIALISTA: 'MARIA PIA ZAÑARTU', PACIENTE: 'ANGEL MUÑOZ', RUT: '9878789-2', PREVISION: 'ISAPRE'},
+        {HORA: '11:30', ESPECIALISTA: 'SCARLETT WITTING', PACIENTE: 'MARIO KAST', RUT: '7998789-5', PREVISION: 'FONASA'},
+        {HORA: '13:00', ESPECIALISTA: 'FRANCISCO VON TEUBER', PACIENTE: 'KARIN FERNANDEZ', RUT: '18887662-K', PREVISION: 'FONASA'},
+        {HORA: '13:30', ESPECIALISTA: 'EDUARDO VIÑUELA', PACIENTE: 'HUGO SANCHEZ', RUT: '17665461-4', PREVISION: 'FONASA'},
+        {HORA: '14:00', ESPECIALISTA: 'RAQUEL VILLASECA', PACIENTE: 'ANA SEPULVEDA', RUT: '14441281-0', PREVISION: 'ISAPRE'},
+    ];
+
+    document.write (
+        "Cantidad de atenciones para Radiología: ", radiologia.length, "<br>",
+        "Cantidad de atenciones para Traumatología: ", traumatologia.length, "<br>", 
+        "Cantidad de atenciones para Dental: ", dental.length
+    )
+</script>
+    
 <body>
-    <button type="button" class="btn btn-primary">Hola Mundo</button>
 
-
-    <!--JQuery 3.5.1-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <!--Popper JS 1.16.1-->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <!--Bootstrap JS 4.5.3-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <!--Mi script-->
-    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
     
 </html>
