incorporacion de primera y ultima atencion por paciente y estilos varios a la impresion por pantalla

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <script>
 
-    document.write('<p>Estadisticas centro medico ñuñoa</p>');
+    document.write("<p><u><b>Estadisticas centro medico ñuñoa</b></u></p>");
 
     var radiologia = [
         {HORA: '11:00', ESPECIALISTA: 'IGNACIO SCHULZ', PACIENTE: 'FRANCISCA ROJAS', RUT: '9878782-1', PREVISION: 'FONASA'},
         {HORA: '11:30', ESPECIALISTA: 'FEDERICO SUBERCASEAUX', PACIENTE: 'PAMELA ESTRADA', RUT: '15345241-3', PREVISION: 'ISAPRE'},
         {HORA: '15:00', ESPECIALISTA: 'FERNANDO WURTHZ', PACIENTE: 'ARMANDO LUNA', RUT: '16445345-9', PREVISION: 'ISAPRE'},
         {HORA: '15:30', ESPECIALISTA: 'ANA MARIA GODOY', PACIENTE: 'MANUEL GODOY', RUT: '17666419-0', PREVISION: 'FONASA'},
-        {HORA: '16:00', ESPECIALISTA: 'PATRICIA SUAZO', PACIENTE: 'RAMON ULLOA', RUT: '14989389-K', PREVISION: 'FONASA'},
+        {HORA: '16:00', ESPECIALISTA: 'PATRICIA SUAZO', PACIENTE: 'RAMON ULLOA', RUT: '14989389-K', PREVISION: 'FONASA'}
     ];
 
     var traumatologia = [
@@ -26,7 +26,7 @@
         {HORA: '11:00', ESPECIALISTA: 'ALEJANDRO BADILLA', PACIENTE: 'FELIPE MARDONES', RUT: '1547423-6', PREVISION: 'ISAPRE'},
         {HORA: '11:30', ESPECIALISTA: 'CECILIA BUDNIK', PACIENTE: 'DIEGO MARRE', RUT: '16554741-K', PREVISION: 'FONASA'},
         {HORA: '12:00', ESPECIALISTA: 'ARTURO CAVAGNARO', PACIENTE: 'CECILIA MENDEZ', RUT: '9747535-8', PREVISION: 'ISAPRE'},
-        {HORA: '12:30', ESPECIALISTA: 'ANDRES KANACRI', PACIENTE: 'MARCIAL SUAZO', RUT: '11254785-5', PREVISION: 'ISAPRE'},
+        {HORA: '12:30', ESPECIALISTA: 'ANDRES KANACRI', PACIENTE: 'MARCIAL SUAZO', RUT: '11254785-5', PREVISION: 'ISAPRE'}
     ];
 
     var dental = [
@@ -35,14 +35,34 @@
         {HORA: '11:30', ESPECIALISTA: 'SCARLETT WITTING', PACIENTE: 'MARIO KAST', RUT: '7998789-5', PREVISION: 'FONASA'},
         {HORA: '13:00', ESPECIALISTA: 'FRANCISCO VON TEUBER', PACIENTE: 'KARIN FERNANDEZ', RUT: '18887662-K', PREVISION: 'FONASA'},
         {HORA: '13:30', ESPECIALISTA: 'EDUARDO VIÑUELA', PACIENTE: 'HUGO SANCHEZ', RUT: '17665461-4', PREVISION: 'FONASA'},
-        {HORA: '14:00', ESPECIALISTA: 'RAQUEL VILLASECA', PACIENTE: 'ANA SEPULVEDA', RUT: '14441281-0', PREVISION: 'ISAPRE'},
+        {HORA: '14:00', ESPECIALISTA: 'RAQUEL VILLASECA', PACIENTE: 'ANA SEPULVEDA', RUT: '14441281-0', PREVISION: 'ISAPRE'}
     ];
 
+    document.write("<b>Cantidad de atenciones por especialidad</b>", "<br>");
     document.write (
         "Cantidad de atenciones para Radiología: ", radiologia.length, "<br>",
         "Cantidad de atenciones para Traumatología: ", traumatologia.length, "<br>", 
-        "Cantidad de atenciones para Dental: ", dental.length
-    )
+        "Cantidad de atenciones para Dental: ", dental.length, "<br>",
+        "<br>"
+
+    );
+
+    document.write("<b>Atenciones área Radiología</b>", "<br>");
+    document.write(`Primera atención: ${radiologia[0].PACIENTE} - ${radiologia[0].PREVISION} | `);
+    document.write(`Última atención: ${radiologia[radiologia.length - 1].PACIENTE} - ${radiologia[radiologia.length - 1].PREVISION}`);
+
+    document.write ("<br>", "<br>");
+
+    document.write("<b>Atenciones área Traumatología</b>", "<br>");
+    document.write(`Primera atención: ${traumatologia[0].PACIENTE} - ${traumatologia[0].PREVISION} | `);
+    document.write(`Última atención: ${traumatologia[traumatologia.length - 1].PACIENTE} - ${traumatologia[traumatologia.length - 1].PREVISION}`);
+
+    document.write ("<br>", "<br>");
+
+    document.write("<b>Atenciones área Dental</b>", "<br>");
+    document.write(`Primera atención: ${dental[0].PACIENTE} - ${dental[0].PREVISION} | `);
+    document.write(`Última atención: ${dental[dental.length - 1].PACIENTE} - ${dental[dental.length - 1].PREVISION}`);
+
 </script>
     
 <body>
